--- a/App.config
+++ b/App.config
@@ -1,23 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <customBinding>
-                <binding name="NawsUslugiSoap">
-                    <mtomMessageEncoding messageVersion="Soap12WSAddressingAugust2004" />
-                    <httpsTransport />
-                </binding>
-            </customBinding>
-        </bindings>
-        <client>
-            <endpoint address="https://www.pt2.zus.pl/SDWI_AWS2/NawsUslugi.svc"
+	<configSections>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
+	<system.diagnostics>
+		<sharedListeners>
+			<add name="consoleListener" type="Zus.ConsoleTraceListener, Zus" />
+		</sharedListeners>
+		<sources>
+			<source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+				<listeners>
+					<add name="consoleListener" />
+				</listeners>
+			</source>
+		</sources>
+		<trace autoflush="true" />
+	</system.diagnostics>
+	<system.serviceModel>
+		<diagnostics>
+			<messageLogging
+				 logEntireMessage="true"
+				 logMalformedMessages="true"
+				 logMessagesAtServiceLevel="true"
+				 logMessagesAtTransportLevel="true"
+				 maxMessagesToLog="3000"
+				 maxSizeOfMessageToLog="2000"/>
+		</diagnostics>
+		<bindings>
+			<customBinding>
+				<binding name="NawsUslugiSoap">
+					<mtomMessageEncoding messageVersion="Soap12WSAddressingAugust2004" />
+					<httpsTransport />
+				</binding>
+			</customBinding>
+		</bindings>
+		<client>
+			<endpoint address="https://www.pt2.zus.pl/SDWI_AWS2/NawsUslugi.svc"
                 binding="customBinding" bindingConfiguration="NawsUslugiSoap"
                 contract="ServiceReference1.INawsUslugi" name="NawsUslugiSoap" />
-        </client>
-    </system.serviceModel>
+		</client>
+	</system.serviceModel>
+
 </configuration>
